--- a/_config.yml
+++ b/_config.yml
@@ -31,46 +31,46 @@ author:
   email: "pereiraosborne8@gmail.com"
 
   # Academic websites
-  arxiv: # URL - Update with the correct link to your profile
-  googlescholar: ""
-  impactstory: # URL
-  orcid: ""
-  pubmed: ""
-  researchgate: # URL
+  # arxiv: # URL - Update with the correct link to your profile
+  # googlescholar: ""
+  # impactstory: # URL
+  # orcid: ""
+  # pubmed: ""
+  # researchgate: # URL
 
   # Repositories and software development
-  bitbucket: # Username - Update with your username on the site
-  codepen: # Username
-  dribbble: # Username
+  # bitbucket: # Username - Update with your username on the site
+  # codepen: # Username
+  # dribbble: # Username
   github: "osbornep8"
   kaggle: "osbornepereira"
-  stackoverflow: # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
+  # stackoverflow: # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
   # Social media
-  bluesky: "" # Replace this with you Bluesky username
-  facebook: # Username
-  flickr: # Username
-  foursquare: # Username
-  goodreads: # Username
-  google_plus: # Username
-  keybase: # Username
-  instagram: # Username
-  lastfm: # Username
+  # bluesky: "" # Replace this with you Bluesky username
+  # facebook: # Username
+  # flickr: # Username
+  # foursquare: # Username
+  # goodreads: # Username
+  # google_plus: # Username
+  # keybase: # Username
+  # instagram: # Username
+  # lastfm: # Username
   linkedin: "https://www.linkedin.com/in/opereira8/"
-  mastodon: # URL
-  medium: # URL
-  pinterest: # Username
-  soundcloud: # Username
-  steam: # Username
-  telegram: # URL
-  tumblr: # Username
-  twitter: # Username for X / Twitter
-  vine: # Username
-  weibo: # Username
-  wikipedia: # Username
-  xing: # Username
-  youtube: # Username
-  zhihu: # URL
+  # mastodon: # URL
+  # medium: # URL
+  # pinterest: # Username
+  # soundcloud: # Username
+  # steam: # Username
+  # telegram: # URL
+  # tumblr: # Username
+  # twitter: # Username for X / Twitter
+  # vine: # Username
+  # weibo: # Username
+  # wikipedia: # Username
+  # xing: # Username
+  # youtube: # Username
+  # zhihu: # URL
 
 # Site Settings
 teaser: # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
