--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar: "Blossom.png"
   name: "Osborne Pereira"
   pronouns: # example: "she/her"
-  bio: "Short biography for the left-hand sidebar"
+  bio: "Computational Neuroscientist"
   location: "Sheffield, UK"
   # employer: ""
   # uri: # URL
